# ecash-app

./: .gitignore  CHANGELOG.md  README.md  flake.nix  justfile  pubspec.yaml  zapstore.yaml
.claude/: CLAUDE.md
.claude/commands/: build-apk.md  check-config.md  generate.md  review-rust-api.md
.claude/skills/android-native/: SKILL.md
.claude/skills/fedimint-rust/: SKILL.md
.claude/skills/frb-integration/: SKILL.md
.github/actions/android-build/: action.yml
.github/workflows/: android-debug.yml  android-release.yml  checks.yml  linux-release.yml  macos-release.yml  test.yml
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/app/ecash/: EcashHceService.kt  MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: apduservice.xml
docker/: Dockerfile  README.md  build-apk.sh  build-appimage.sh  entrypoint.sh
docs/: contributing.md  lnurlw-testing.md  qa-checklist.md  release-process.md  updating-flutter.md
lib/: app.dart  app_error.dart  app_error.freezed.dart  create_wallet.dart  dashboard.dart  db.dart  deep_link_handler.dart  detail_row.dart  discover.dart  ecash_send.dart  error_helper.dart  event_bus.dart  failure.dart  fed_preview.dart  fountain.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  join.dart  lib.dart  lib.freezed.dart  ln_address.dart  lnurl.dart  lnurl_withdraw.dart  main.dart  mnemonic.dart  models.dart  multimint.dart  multimint.freezed.dart  nfc_hce.dart  nostr.dart  nostr_recovery_progress.dart  number_pad.dart  nwc.dart  onchain_receive.dart  onchain_send.dart  pay.dart  pay_preview.dart  payment_selector.dart  pin_gated_app.dart  (+19 more)
lib/constants/: transaction_key_labels.dart  transaction_keys.dart
lib/contacts/: add_contact_dialog.dart  contact_item.dart  contact_picker.dart  contact_profile.dart  contacts_screen.dart  import_follows_dialog.dart
lib/core/: secure_storage.dart
lib/extensions/: build_context_l10n.dart
lib/l10n/: app_en.arb  app_es.arb
lib/providers/: preferences_provider.dart
lib/screens/: access_control.dart  btcmap_screen.dart  dashboard.dart  display_settings.dart  federation_info_screen.dart  my_wallet_screen.dart  transactions_screen.dart
lib/screens/lightning_send/: recipient_entry.dart
lib/utils/: amount_validation.dart
lib/widgets/: addresses.dart  dashboard_balance.dart  dashboard_header.dart  empty_transactions.dart  federation_card.dart  federation_picker.dart  federation_utxo_list.dart  gateway_card.dart  gateway_details.dart  gateway_picker.dart  gateways.dart  ln_address_dialog.dart  note_summary.dart  payment_type_sheet.dart  pending_deposit_item.dart  pin_entry.dart  protocol_badge.dart  recent_transactions_header.dart  transaction_details.dart  transaction_item.dart  transactions_list.dart
lib/widgets/numpad/: custom_numpad.dart  numpad_button.dart
linux/: CMakeLists.txt
linux/appstream/: ecash-app.appdata.xml  org.fedimint.app.appdata.xml
linux/runner/: ecash-app.desktop  my_application.cc
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
metadata/en-US/: full_description.txt  short_description.txt
metadata/en-US/changelogs/: 50090.txt  60090.txt  60190.txt  70090.txt  70190.txt  80090.txt
rust/carbine_fedimint/: Cargo.toml  build.sh  generate.sh
rust/carbine_fedimint/src/: db.rs  frb_generated.rs  lib.rs  multimint.rs  nostr.rs
rust/ecashapp/: Cargo.toml
rust/ecashapp/src/: android_init.rs  app_error.rs  db.rs  event_bus.rs  events.rs  fountain.rs  frb_generated.rs  lib.rs  lnurl.rs  multimint.rs  nostr.rs  parse.rs  words.rs
rust/ecashapp/src/wallet/: mod.rs
scripts/: build-android.sh  build-arm-android.sh  build-linux.sh  build-macos.sh  build-rust-fdroid.sh  check-translations.sh  package-linux.sh  package-macos.sh  release.sh  run-macos.sh  test-lnurlw.py
scripts/test-lnurlw/: Cargo.toml
scripts/test-lnurlw/src/: main.rs
test/: amount_validation_test.dart  deep_link_parser_test.dart  qr_export_test.dart  utils_test.dart  widget_test.dart
