[package]
name = "carbine_fedimint"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
fedimint-api-client = "0.6.1"
fedimint-bip39 = "0.6.1"
fedimint-core = "0.6.1"
fedimint-client = "0.6.1"
fedimint-ln-client = "0.6.1"
fedimint-lnv2-client = "0.6.1"
fedimint-mint-client = "0.6.1"
fedimint-wallet-client = "0.6.1"
flutter_rust_bridge = "=2.9.0"
futures-util = "0.3.30"
redb = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
