[package]
name = "ecashapp"
version = "0.8.0-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoin-payment-instructions = { version = "0.4.0", features = [ "http" ]}
# Pinned to post-v0.11.0 master (merge commit for fedimint/fedimint#8520,
# which exposes per-peer Connectivity on connection_status_stream). Drop
# back to a version pin once a release containing that PR ships.
fedimint-api-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-bip39 = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-core = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-fountain = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-eventlog = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-connectors = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-derive-secret = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-rocksdb = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-ln-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-lnv2-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-lnv2-common = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-ln-common = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-meta-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-mint-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-mint-common = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-wallet-client = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
fedimint-wallet-common = { git = "https://github.com/fedimint/fedimint", rev = "654ac4269474a007c55e761c2d593ae7582d7e99" }
hex = "0.4"
flutter_rust_bridge = "=2.9.0"
futures-timer = "3.0.3"
futures-util = "0.3.30"
lightning-invoice = { version = "0.33.2", features = ["std"] } # Needs to match fedimint's lightning-invoice
lnurl-rs = { version = "0.9.0", default-features = false }
nostr-sdk = { version = "0.42.0", features = [ "nip04" ]}
regex = "1.11.1"
reqwest = { version = "0.12.18", features = [
  "rustls-tls",
  "json",
], default-features = false }
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = "1.45.1"

[profile.dev.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
debug = "line-tables-only"

[profile.release.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}

# Fast development builds that are still usable (crypto code needs optimization)
# Use via: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
incremental = true

[profile.release-dev.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
