[package]
name = "ecashapp"
version = "0.9.0-alpha"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
async-trait = "0.1.88"
bitcoin = { version = "0.32.5", features = ["serde"] }
bitcoin-payment-instructions = { version = "0.4.0", features = [ "http" ]}
# Pinned to post-v0.11.0 master. Carries the per-peer Connectivity on
# connection_status_stream (fedimint/fedimint#8520) plus the module-agnostic
# fee-quote API: receive_fee_quote/reissue_fee_quote now return the shared
# fedimint_client::transaction::FeeQuote. Drop back to a version pin once a
# release containing these ships.
fedimint-api-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-bip39 = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-core = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-fountain = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-eventlog = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-connectors = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-derive-secret = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-rocksdb = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-ln-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-lnv2-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-lnv2-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-ln-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-meta-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-mint-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-mint-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-mintv2-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-mintv2-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-wallet-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-wallet-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-walletv2-client = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
fedimint-walletv2-common = { git = "https://github.com/m1sterc001guy/fedimint", rev = "b7ed9d5e095c27638f57c1d20685cb5eea53225e" }
hex = "0.4"
flutter_rust_bridge = "=2.9.0"
futures-timer = "3.0.3"
futures-util = "0.3.30"
lightning-invoice = { version = "0.33.2", features = ["std"] } # Needs to match fedimint's lightning-invoice
lnurl-rs = { version = "0.9.0", default-features = false }
nostr-sdk = { version = "0.42.0", features = [ "nip04" ]}
regex = "1.11.1"
reqwest = { version = "0.12.18", features = [
  "rustls-tls",
  "json",
], default-features = false }
semver = "1.0.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0"
tokio = "1.45.1"

[profile.dev.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
debug = "line-tables-only"

[profile.release.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3}
secp256k1-sys = { opt-level = 3}

# Fast development builds that are still usable (crypto code needs optimization)
# Use via: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
incremental = true

[profile.release-dev.package]
librocksdb-sys = { opt-level = 3 }
secp256k1 = { opt-level = 3 }
secp256k1-sys = { opt-level = 3 }
